Minor - Fix : ToolsBanner img not align + Navigation

--- a/src/Components/Project/Project.scss
+++ b/src/Components/Project/Project.scss
@@ -1,6 +1,7 @@
 .project-container {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   height: fit-content;
   border: solid #483468 1px;
