--- a/src/Pages/AboutMe/AboutMe.scss
+++ b/src/Pages/AboutMe/AboutMe.scss
@@ -7,6 +7,7 @@
   height: 100vh;
   min-height: max-content;
   width: 100vw;
+  max-width: 100%;
   background-color: #19182d;
   padding: 0;
   margin: 0;
